https://bugify.idfive.com/issues/27596

--- a/src/components/site-footer/_site-footer.scss
+++ b/src/components/site-footer/_site-footer.scss
@@ -179,6 +179,8 @@
   margin-bottom: rem(30);
   @include media-breakpoint-up(xl) {
     border-bottom: none;
+    min-height: rem(130);
+    min-width: rem(400);
   }
 
   ul {
