https://bugify.idfive.com/issues/27599

--- a/src/components/link-set/_link-set.scss
+++ b/src/components/link-set/_link-set.scss
@@ -41,7 +41,7 @@
       text-decoration: underline;
     }
   }
-  &.link-secondary,
+  &.iastate22-link-secondary,
   &.link-tertiary {
     margin: 0;
   }
