--- a/src/components/pages/_college-template.scss
+++ b/src/components/pages/_college-template.scss
@@ -407,8 +407,7 @@
       margin-right: rem(-70);
     }
     @include media-breakpoint-up(xl) {
-      margin-top: rem(30);
-      margin-bottom: rem(40);
+      margin: rem(30) 0 rem(40) 0;
     }
     .external-news-story {
       @include media-breakpoint-up(lg) {
@@ -445,6 +444,9 @@
     @include media-breakpoint-up(md) {
       margin-left: rem(-70);
       margin-right: rem(-70);
+    }
+    @include media-breakpoint-up(xl) {
+      margin: rem(30) 0 rem(40) 0;
     }
     .external-news-story__content {
       p {
