typography - updating $merriweather variable to the more generic $typeface-serif naming

--- a/src/components/card/_card.scss
+++ b/src/components/card/_card.scss
@@ -248,7 +248,7 @@
     }
   }
   .iastate22-modal__title {
-    font-family: $merriweather;
+    font-family: $typeface-serif;
     font-weight: 700;
     font-size: rem(30);
     line-height: (44 / 30);
