--- a/src/components/home-announcement/_home-announcement.scss
+++ b/src/components/home-announcement/_home-announcement.scss
@@ -15,7 +15,7 @@
 
 .home-announcement__text {
   color: $white;
-  font-family: $merriweather;
+  font-family: $typeface-serif;
   font-size: rem(16);
   font-weight: 700;
   line-height: (26 / 16);
