--- a/src/components/pages/_home.scss
+++ b/src/components/pages/_home.scss
@@ -455,7 +455,7 @@
   flex: 0 1 auto;
   width: 40%;
   text-align: center;
-  font-family: $merriweather;
+  font-family: $typeface-serif;
   font-weight: 700;
   font-size: rem(51);
   line-height: (51 / 51);
@@ -813,7 +813,7 @@
 
 .home-location__caption-text {
   color: $white;
-  font-family: $merriweather;
+  font-family: $typeface-serif;
   font-weight: 700;
   font-size: rem(16);
   line-height: (21 / 16);
@@ -1497,7 +1497,7 @@
 }
 
 .home-resources__subhead {
-  font-family: $merriweather;
+  font-family: $typeface-serif;
   font-weight: 700;
   text-align: right;
   font-size: rem(23);
