--- a/src/components/site-footer/_site-footer.scss
+++ b/src/components/site-footer/_site-footer.scss
@@ -228,7 +228,7 @@
   text-align: center;
   font-size: rem(18);
   line-height: (26 / 18);
-  font-family: $merriweather;
+  font-family: $typeface-serif;
   font-weight: 700;
   @include media-breakpoint-up(md) {
     text-align: left;
