--- a/src/scss/_core/_variables.scss
+++ b/src/scss/_core/_variables.scss
@@ -23,7 +23,7 @@ $nimbus-sans-regular: "nimbus_sans_lregular", sans-serif;
 $nimbus-sans-regular-italic: "nimbus_sans_lregular_italic", sans-serif;
 $nimbus-sans-bold: "nimbus_sans_lbold", sans-serif;
 $nimbus-sans-bold-italic: "nimbus_sans_lbold_italic", sans-serif;
-$merriweather: "Merriweather", serif;
+$typeface-serif: "Merriweather", serif;
 $font-size-root: 16px;
 
 /* Base
