updating typography in font-face rules to always point to nimbus-sans-regular and rely on font-weight and font-style to set bold or italics rather than explicitly naming the bold or italic font names

--- a/src/components/blockquote/_blockquote.scss
+++ b/src/components/blockquote/_blockquote.scss
@@ -119,7 +119,7 @@
 }
 .iastate22-blockquote__author {
   color: $white;
-  font-family: $nimbus-sans-bold;
+  font-family: $nimbus-sans-regular;
   font-weight: 700;
   margin-top: rem(20);
   padding-right: rem(75);
