--- a/src/components/callout-inset/_callout-inset.scss
+++ b/src/components/callout-inset/_callout-inset.scss
@@ -45,7 +45,7 @@
 
     .feature-with-large-image__text {
       p {
-        font-family: $nimbus-sans-bold;
+        font-family: $nimbus-sans-regular;
         font-weight: 700;
       }
     }
