--- a/src/components/form/_form.scss
+++ b/src/components/form/_form.scss
@@ -5,7 +5,7 @@
   label,
   .label {
     display: block;
-    font-family: $nimbus-sans-bold;
+    font-family: $nimbus-sans-regular;
     font-size: rem(18);
     line-height: (25 / 18);
     font-weight: 700;
