--- a/src/components/link-secondary/_link-secondary.scss
+++ b/src/components/link-secondary/_link-secondary.scss
@@ -4,7 +4,7 @@
   margin: rem(10) 0;
   cursor: pointer;
   color: $iastate-maroon;
-  font-family: $nimbus-sans-bold;
+  font-family: $nimbus-sans-regular;
   font-weight: 700;
   font-size: rem(18);
   line-height: (25 / 18);
