--- a/src/components/button/_button.scss
+++ b/src/components/button/_button.scss
@@ -10,7 +10,7 @@
   cursor: pointer;
   background-color: transparent;
   color: $iastate-maroon;
-  font-family: $nimbus-sans-bold;
+  font-family: $nimbus-sans-regular;
   font-weight: 700;
   font-size: rem(18);
   line-height: (25 / 18);
