--- a/src/components/call-to-action/_call-to-action.scss
+++ b/src/components/call-to-action/_call-to-action.scss
@@ -130,7 +130,7 @@
     }
 
     p {
-      font-family: $nimbus-sans-bold;
+      font-family: $nimbus-sans-regular;
       font-size: rem(16);
       line-height: (29 / 16);
       font-weight: 700;
