--- a/src/components/statistic/_statistic.scss
+++ b/src/components/statistic/_statistic.scss
@@ -27,7 +27,7 @@
   margin: 0;
   text-align: center;
   color: $white;
-  font-family: $nimbus-sans-bold;
+  font-family: $nimbus-sans-regular;
   font-weight: 700;
   font-size: rem(18);
   line-height: (30 / 18);
