swapping out font variables for generic names instead of specific font names, updating typography in font-face rules to always point to nimbus-sans-regular and rely on font-weight and font-style to set bold or italics rather than explicitly naming the bold or italic font names

--- a/src/components/call-to-action/_call-to-action.scss
+++ b/src/components/call-to-action/_call-to-action.scss
@@ -130,7 +130,7 @@
     }
 
     p {
-      font-family: $nimbus-sans-regular;
+      font-family: $typeface-sans-serif;
       font-size: rem(16);
       line-height: (29 / 16);
       font-weight: 700;
