--- a/src/components/modal/_modal.scss
+++ b/src/components/modal/_modal.scss
@@ -73,7 +73,7 @@
 .iastate22-modal__title {
   margin: 0 0 rem(10) 0;
   padding: 0;
-  font-family: $nimbus-sans-regular;
+  font-family: $typeface-sans-serif;
   font-size: rem(21);
   line-height: (30 / 21);
   font-weight: 700;
