--- a/src/scss/_core/_accordion.scss
+++ b/src/scss/_core/_accordion.scss
@@ -28,7 +28,7 @@
 }
 
 .accordion-button {
-  font-family: $nimbus-sans-regular;
+  font-family: $typeface-sans-serif;
   font-weight: 700;
   color: $iastate-red;
   font-size: rem(21);
