--- a/src/scss/_core/_placeholder-selectors.scss
+++ b/src/scss/_core/_placeholder-selectors.scss
@@ -82,7 +82,7 @@
 %caption,
 .caption {
   margin-top: rem(8);
-  font-family: $nimbus-sans-regular;
+  font-family: $typeface-sans-serif;
   font-style: italic;
   font-size: rem(16);
   line-height: (26 / 16);
