--- a/src/scss/_core/_variables.scss
+++ b/src/scss/_core/_variables.scss
@@ -19,7 +19,7 @@ $iastate-gold: #f1be48;
 
 /* Fonts
    ========================================================================== */
-$nimbus-sans-regular: "nimbus_sans_lregular", sans-serif;
+$typeface-sans-serif: "nimbus_sans_lregular", sans-serif;
 $typeface-serif: "Merriweather", serif;
 $font-size-root: 16px;
 
