--- a/src/components/blockquote/_blockquote.scss
+++ b/src/components/blockquote/_blockquote.scss
@@ -119,7 +119,7 @@
 }
 .iastate22-blockquote__author {
   color: $white;
-  font-family: $nimbus-sans-regular;
+  font-family: $typeface-sans-serif;
   font-weight: 700;
   margin-top: rem(20);
   padding-right: rem(75);
