--- a/src/components/breadcrumb/_breadcrumb.scss
+++ b/src/components/breadcrumb/_breadcrumb.scss
@@ -10,7 +10,7 @@
 
   a {
     font-weight: 700;
-    font-family: $nimbus-sans-regular;
+    font-family: $typeface-sans-serif;
     font-size: rem(18);
     line-height: (34 / 18);
     color: $iastate-maroon;
