--- a/src/components/pages/_admission-and-aid.scss
+++ b/src/components/pages/_admission-and-aid.scss
@@ -494,7 +494,7 @@
       padding-top: rem(50);
       padding-bottom: rem(50);
     }
-    .link-secondary {
+    .iastate22-link-secondary {
       color: $white;
       .arrow {
         background-color: $white;
@@ -600,7 +600,7 @@
 }
 .admission-aid-links__link-list-link-text {
   flex: 1 1 0px;
-  font-family: $nimbus-sans-bold;
+  font-family: $typeface-sans-serif;
   font-weight: 700;
   color: currentColor;
   font-size: rem(21);
