--- a/src/components/pages/a-z-index.twig
+++ b/src/components/pages/a-z-index.twig
@@ -30,7 +30,7 @@
     <ul>
       {% for entry in entry_list.list %}
       <li>
-        <a href="{{ entry.url }}" class="link-secondary">{{ entry.title }}<span class="arrow"></span></a>
+        <a href="{{ entry.url }}" class="iastate22-link-secondary">{{ entry.title }}<span class="arrow"></span></a>
       </li>
       {% endfor %}
     </ul>
