--- a/src/components/pages/college-template.twig
+++ b/src/components/pages/college-template.twig
@@ -55,7 +55,7 @@
         <ul>
         {% for listing in maj_min_certs.listings %}
           <li>
-            <a href="{{ listing.url }}" class="link-secondary">{{ listing.title }}<span class="arrow"></span></a>
+            <a href="{{ listing.url }}" class="iastate22-link-secondary">{{ listing.title }}<span class="arrow"></span></a>
             <p class="maj-min-cert-program-list__program-type">{{ listing.program_type }}</p>
           </li>
         {% endfor %}
