--- a/src/components/pages/majors-minors-certificates.twig
+++ b/src/components/pages/majors-minors-certificates.twig
@@ -29,7 +29,7 @@
         <ul>
           {% for list_item in list.listings %}
           <li>
-            <a href="{{ list_item.url }}" class="link-secondary">{{ list_item.title }}<span class="arrow"></span></a>
+            <a href="{{ list_item.url }}" class="iastate22-link-secondary">{{ list_item.title }}<span class="arrow"></span></a>
             <p class="maj-min-cert-program-list__program-type">{{ list_item.program_type }}</p>
           </li>
           {% endfor %}
