--- a/src/components/pages/_college-template.scss
+++ b/src/components/pages/_college-template.scss
@@ -437,16 +437,15 @@
 // Innovation and Entrepreneurship Section
 .college-innovation {
   padding: rem(20) 0 0 0;
+  @include media-breakpoint-up(lg) {
+    padding-bottom: rem(37);
+  }
   .paragraph-widget--external-news-story {
-    margin-left: rem(-36);
-    margin-right: rem(-36);
     margin-bottom: 0;
-    @include media-breakpoint-up(md) {
-      margin-left: rem(-70);
-      margin-right: rem(-70);
-    }
+
     @include media-breakpoint-up(xl) {
-      margin: rem(30) 0 rem(40) 0;
+      margin-top: rem(30);
+      margin-bottom: rem(40);
     }
     .external-news-story__content {
       p {
@@ -457,6 +456,9 @@
 }
 .college-innovation__intro-wrap {
   max-width: rem(844);
+  @include media-breakpoint-up(lg) {
+    margin-bottom: rem(50);
+  }
 }
 .college-innovation__title {
   @extend %h2-yellow-border;
@@ -475,9 +477,6 @@
     margin-top: 0;
     .callout-inset_inset {
       padding-bottom: rem(70);
-      p {
-        line-height: (29 / 18);
-      }
     }
   }
 }
@@ -490,6 +489,7 @@
     flex-wrap: wrap;
     align-items: flex-start;
     justify-content: space-between;
+    padding-bottom: rem(187);
   }
 }
 
@@ -504,12 +504,17 @@
 }
 
 .college-success__intro {
-  line-height: (29 / 18);
   margin-bottom: rem(17);
 }
 
 .college-success__career-paths {
   margin-top: rem(48);
+  .college-success__career-paths-title {
+    @include media-breakpoint-up(lg) {
+      margin-bottom: rem(20);
+    }
+  }
+
   ul {
     margin-top: rem(15);
     @include media-breakpoint-up(md) {
@@ -539,9 +544,8 @@
     margin-right: auto;
   }
   @include media-breakpoint-up(lg) {
-    margin: 0;
     flex: 0 0 auto;
-    margin-left: rem(60);
+    margin: 0 rem(-20) 0 rem(80);
   }
   .iastate22-card--profile-with-modal {
     &:hover {
@@ -586,6 +590,7 @@
   @include media-breakpoint-up(xl) {
     margin-left: rem(-190);
     margin-right: rem(-190);
+    min-height: rem(810);
   }
 }
 
@@ -600,8 +605,17 @@
     max-width: rem(520);
     margin-left: auto;
     margin-right: rem(82);
-    padding-left: rem(85);
-    padding-right: rem(85);
+    padding: rem(60) rem(85) rem(30);
+  }
+  &.college-ctas__cta-top {
+    @include media-breakpoint-up(xl) {
+      top: rem(-60);
+    }
+  }
+  &.college-ctas__cta-bottom {
+    @include media-breakpoint-up(xl) {
+      margin-top: rem(5);
+    }
   }
 
   &:before {
